# CodingIsOurPassion

./: ARCHITECTURE.md  README.md
LakeWatch/: README.md
LakeWatch/PDCD/: ARCHITECTURE.org  Layout.uml
LakeWatch/PDCD/Data-Files/: Canyon-Lake-USACE-Operators.html  Canyon-Lake-USACE.html  Comal-County-Ramp-Info.json  waterdata.csv  weather-gov-forecast.json
LakeWatch/PDCD/Data-Files/Canyon-Lake-USACE_files/: afpims.header.css  main.js
LakeWatchAPI/: Cargo.toml  README.md  deny.toml  flake.nix
LakeWatchAPI/src/: main.rs  startup.rs
LakeWatchAPI/src/routes/v1/: mod.rs  status.rs
LakeWatchAPI/tests/api/: helpers.rs  main.rs
LakeWatchAPI/tests/api/v1/: status.rs
LakeWatchScraper/: README.md  flake.nix  pyproject.toml
LakeWatchScraper/lakewatchscraper/: __main__.py
LakeWatchScraper/lakewatchscraper/waterdata/: __init__.py  reservoir.py
Meetings/: Project-Proposal.md
Meetings/assets/project-proposal/: Team-Agreement-Document.typ
